force-app/main/default/objects/EcoVadis_Settings__c/EcoVadis_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for EcoVadis integration</description>
    <label>EcoVadis Settings</label>
</CustomObject>