force-app/main/default/objects/EcoVadis_Settings__c/fields/Environment_URL__c.field-meta.xml
<CustomField>
    <fullName>Environment_URL__c</fullName>
    <inlineHelpText>URL of the environment (Sandbox or Live)</inlineHelpText>
    <label>Environment URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>