force-app/main/default/objects/EcoVadis_Settings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <inlineHelpText>EcoVadis Password</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>