force-app/main/default/objects/EcoVadis_Settings__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <inlineHelpText>EcoVadis username.  In the form of an email address</inlineHelpText>
    <label>Username</label>
    <required>true</required>
    <type>Email</type>
</CustomField>